<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="10dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alex.personalpins.ui.CreatePinActivity">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:hint="@string/enter_pin_title_hint"/>

    <FrameLayout
        android:id="@+id/imageContainer"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">

    <android.support.v7.widget.GridLayout
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#DADDEA"
        android:id="@+id/gridLayout"
        xmlns:grid="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:columnCount="2"
        app:rowCount="2">

        <ImageView
            android:id="@+id/newPhotoImageView"
            android:contentDescription="@string/new_photo"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src = "@drawable/ic_add_a_photo_black_48dp"
            app:layout_row="0"
            app:layout_column="0"/>

        <ImageView
            android:id="@+id/selectPhotoImageView"
            android:contentDescription="@string/select_photo"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src = "@drawable/ic_photo_library_black_48dp"
            app:layout_row="0"
            app:layout_column="1"/>

        <ImageView
            android:id="@+id/newVideoImageView"
            android:contentDescription="@string/new_video"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src = "@drawable/ic_video_call_black_48dp"
            app:layout_row="1"
            app:layout_column="0"/>

        <ImageView
            android:id="@+id/selectVideoImageView"
            android:contentDescription="@string/select_video"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src = "@drawable/ic_video_library_black_48dp"
            app:layout_row="1"
            app:layout_column="1"/>

    </android.support.v7.widget.GridLayout>
    </FrameLayout>

    <EditText
        android:id="@+id/commentEditText"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/enter_comment_hint"/>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tagsTitleTextView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/tags"/>

        <Button
            android:id="@+id/editTagsButton"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/ic_mode_edit_black_18dp"
            android:layout_toEndOf="@+id/tagsTitleTextView"
            android:layout_toRightOf="@+id/tagsTitleTextView"/>

    <TextView
        android:id="@+id/tagsListTextView"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@+id/tagsTitleTextView"
        tools:text="tag 1, tag 2, tag 3, tag 4, tag 5, tag 6, tag 7, tag 8, tag 9"/>

    </RelativeLayout>

    <Button
        android:id="@+id/createPinButton"
        android:text="@string/create_pin"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
