<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context="com.example.alex.personalpins.ui.SelectTagsActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:id="@+id/emptyTextView"
        android:text="@string/add_tags_hint"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/tagNameEditText"
            android:hint="@string/enter_tag_hint"
            android:textSize="20sp"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/searchInfoTextView"
            android:text="@string/select_tags_to_search_pins"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

<android.support.v7.widget.RecyclerView
    android:layout_marginTop="20dp"
    android:id="@+id/recyclerView"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp">
</android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/button"
        android:text="@string/submit"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>
